<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.alfredobarron.proyectofinal.Register">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/data_access"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_access"
                android:textStyle="bold"
                android:textSize="15dp"
                android:ellipsize="marquee"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_below="@id/data_access"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#828080"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/usuario"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user"
                android:maxLines="1"
                android:inputType="text"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/data_entrenador"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_entrenador"
                android:textStyle="bold"
                android:textSize="15dp"
                android:ellipsize="marquee"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_below="@id/data_access"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#828080"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/nombre"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:maxLines="1"
                android:inputType="text"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/apellidos"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:maxLines="1"
                android:inputType="text"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/birthday"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/birthday"
                android:textStyle="bold"
                android:textSize="15dp"
                android:ellipsize="marquee"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_below="@id/birthday"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#828080"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/fecha_de_nacimiento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textSize="15dp"
                style="?android:attr/spinnerStyle"/>

            <TextView
                android:id="@+id/birth_site"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/birth_site"
                android:textStyle="bold"
                android:textSize="15dp"
                android:ellipsize="marquee"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_below="@id/birthday"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#828080"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                />

            <Spinner
                android:id="@+id/lugar_de_nacimiento"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/choose_one"
                android:entries="@array/regiones"
                android:textSize="15dp"></Spinner>

            <TextView
                android:id="@+id/sex"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sexo"
                android:textStyle="bold"
                android:textSize="15dp"
                android:ellipsize="marquee"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_below="@id/sex"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#828080"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                />

            <RadioGroup
                android:id="@+id/sexo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/sex"
                android:clickable="false"
                android:contentDescription="@string/sexo"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:baselineAligned="false"
                android:measureWithLargestChild="false">

                <RadioButton
                    android:id="@+id/hombre"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/man"
                    android:checked="true"
                    android:textSize="15dp"
                    android:textAlignment="center"/>

                <RadioButton
                    android:id="@+id/mujer"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/woman"
                    android:textSize="15dp"
                    android:textAlignment="center"/>

            </RadioGroup>

            <TextView
                android:id="@+id/leader"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/leader"
                android:textStyle="bold"
                android:textSize="15dp"
                android:ellipsize="marquee"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_below="@id/leader"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#828080"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                />

            <RadioGroup
                android:id="@+id/lider"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/leader"
                android:clickable="false"
                android:contentDescription="@string/leader"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:baselineAligned="false"
                android:measureWithLargestChild="false">

                <RadioButton
                    android:id="@+id/yes"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/yes"
                    android:checked="true"
                    android:textSize="15dp"
                    android:textAlignment="center"/>

                <RadioButton
                    android:id="@+id/no"
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="wrap_content"
                    android:text="@string/no"
                    android:textSize="15dp"
                    android:textAlignment="center"/>

            </RadioGroup>

            <TextView
                android:id="@+id/site_residence"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/site_residence"
                android:textStyle="bold"
                android:textSize="15dp"
                android:ellipsize="marquee"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_below="@id/site_residence"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#828080"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                />

            <Spinner
                android:id="@+id/lugar_de_residencia"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:prompt="@string/choose_one"
                android:entries="@array/regiones"
                android:textSize="15dp"></Spinner>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
