<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/pokeball"/>

            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/welcome"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:ellipsize="marquee"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    style="?android:attr/textAppearanceLarge"/>

                <LinearLayout
                    android:layout_below="@id/welcome"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#828080"
                    android:orientation="horizontal"
                    android:layout_marginBottom="10dp"
                    />

                <EditText
                    android:id="@+id/usuario_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user"
                    android:maxLines="1"
                    android:inputType="text"
                    android:layout_marginBottom="10dp"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"/>

            </LinearLayout>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:id="@+id/sign_in_button"
                    style="?android:textAppearanceButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_sign_in"
                    android:textStyle="bold"
                    android:onClick="entrar"
                    android:background="#337ab7"
                    android:textColor="#fff"
                    android:shadowColor="#204d74"/>

                <Button
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/sign_in_button"
                    android:id="@+id/register_button"
                    style="?android:textAppearanceButton"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/action_register"
                    android:textStyle="bold"
                    android:background="#5bc0de"
                    android:textColor="#fff"
                    />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>

