<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="98dp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/intenta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sorry"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/ic_action_refresh"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/empty"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/disponible"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/lleno"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_disponible"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <!--<EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/habitacion"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="Datos de la habitaacion"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Habitacion  Asignada"
        android:id="@+id/asignada"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/habitacion"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:id="@+id/numero"
        android:layout_below="@+id/asignada"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cama Asignada"
        android:id="@+id/cama"
        android:layout_below="@+id/numero"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        android:id="@+id/numero2"
        android:layout_below="@+id/cama"
        android:layout_centerHorizontal="true" />-->


</RelativeLayout>