<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

  <!--  <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="98dp"
        android:visibility="visible"/>

    <TextView
        android:id="@+id/intenta"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/sorry"
        android:textSize="30dp"
        android:gravity="center_horizontal"
        android:drawableTop="@drawable/ic_action_refresh"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Editar entrenador"
        android:ems="10"
        android:id="@+id/editar"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Nombre"
        android:ems="10"
        android:id="@+id/editText4"
        android:layout_below="@+id/editar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Apellidos"
        android:ems="10"
        android:id="@+id/editText5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editText4" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText7"
        android:layout_below="@+id/editText5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="Password"
        android:layout_alignRight="@+id/editText5"
        android:layout_alignEnd="@+id/editText5" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText8"
        android:text="fecha de nacimiento"
        android:layout_below="@+id/editText7"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText9"
        android:layout_below="@+id/editText8"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="Lugar de nacimiento"
        android:layout_alignRight="@+id/editText8"
        android:layout_alignEnd="@+id/editText8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/sexo"
        android:id="@+id/sexo"
        android:layout_below="@+id/editText9"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="53dp" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hombre"
        android:id="@+id/radioButton"
        android:layout_below="@+id/sexo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mujer"
        android:id="@+id/radioButton2"
        android:layout_below="@+id/sexo"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="Localizacion actual"
        android:ems="10"
        android:id="@+id/localizacion"
        android:layout_above="@+id/spinner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dar de Baja"
        android:id="@+id/switch1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:layout_above="@+id/switch1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />-->

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/data_access"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_access"
                android:textStyle="bold"
                android:textSize="15dp"
                android:ellipsize="marquee"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_below="@id/data_access"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#828080"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/usuario_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/data_entrenador"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_entrenador"
                android:textStyle="bold"
                android:textSize="15dp"
                android:ellipsize="marquee"
                android:gravity="center_horizontal"/>

            <LinearLayout
                android:layout_below="@id/data_access"
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#828080"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/nombre_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:singleLine="true"/>

            <EditText
                android:id="@+id/apellidos_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:inputType="text"
                android:singleLine="true"/>

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

            <Button
                android:id="@+id/edit_button"
                style="?android:textAppearanceButton"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_hecho"
                android:textStyle="bold"
                android:background="#5cb85c"
                android:textColor="#fff"
                android:shadowColor="#4cae4c"/>

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>